--- a/EpubSearcherAndroidApp/AndroidManifest.xml
+++ b/EpubSearcherAndroidApp/AndroidManifest.xml
@@ -7,7 +7,10 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+
     <application
         android:name="com.dropbox.client2.android.AuthActivity"
         android:allowBackup="true"
@@ -16,17 +19,30 @@
         android:label="@string/app_name"
         android:launchMode="singleTask"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.epubsearcherandroidapp.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity
+            
+            android:name="com.dropbox.client2.android.AuthActivity"
+            android:configChanges="orientation|keyboard"
+            android:launchMode="singleTask" >
+            <intent-filter>
                 <!-- Change this to be db- followed by your app key -->
-    			<data android:scheme="db-4lux9y10nib629k" />
-    			<action android:name="android.intent.action.VIEW" />
-    			<category android:name="android.intent.category.BROWSABLE"/>
-    			<category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="db-4lux9y10nib629k" />
+
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
