--- a/EpubSearcherAndroidApp/bin/AndroidManifest.xml
+++ b/EpubSearcherAndroidApp/bin/AndroidManifest.xml
@@ -6,11 +6,11 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
-
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
-
+        android:targetSdkVersion="19" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    
     <application
         android:allowBackup="true"
         android:configChanges="orientation|keyboard"
@@ -18,7 +18,6 @@
         android:label="@string/app_name"
         android:launchMode="singleTask"
         android:theme="@style/AppTheme" >
-        
         <activity
             android:name=".DropboxEpubSearcher"
             android:label="@string/app_name" >
@@ -28,7 +27,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name=".ListingActivity"
             android:label="@string/app_name" >
@@ -38,12 +36,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity            
+        <activity
             android:name="com.dropbox.client2.android.AuthActivity"
             android:configChanges="orientation|keyboard"
             android:launchMode="singleTask" >
             <intent-filter>
+
                 <!-- Change this to be db- followed by your app key -->
                 <data android:scheme="db-4lux9y10nib629k" />
 
@@ -54,5 +52,5 @@
             </intent-filter>
         </activity>
     </application>
-
+    
 </manifest>
