--- a/EpubSearcherAndroidApp/bin/AndroidManifest.xml
+++ b/EpubSearcherAndroidApp/bin/AndroidManifest.xml
@@ -7,10 +7,10 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:configChanges="orientation|keyboard"
@@ -19,7 +19,7 @@
         android:launchMode="singleTask"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".DropboxEpubSearcher"
+            android:name="com.epubsearcherandroidapp.activities.DropboxEpubSearcher"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ListingActivity"
+            android:name="com.epubsearcherandroidapp.activities.ListingActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -51,6 +51,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="com.epubsearcherandroidapp.activities.EpubCoverFullscreenActivity"></activity>
     </application>
-    
+
 </manifest>
