--- a/EpubSearcherAndroidApp/AndroidManifest.xml
+++ b/EpubSearcherAndroidApp/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:launchMode="singleTask"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.epubsearcherandroidapp.activities.DropboxEpubSearcher"
+            android:name="com.epubsearcherandroidapp.activities.DropboxEpubSearcherLoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
